2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c: Documentation improvements.  (#309946, 
	Torsten Schoenfeld)

2005-07-10  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_page_up_down): remove
	unneeded check for negative window_y.

2005-07-10  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_search_key_press_event): also move
	to the next match when ctrl+g is pressed. (#156657, Matt T. Proud).

2005-07-10  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_page_up_down): rework
	function to make page up/down behave the same as in GtkTextView.
	(Fixes #101220, Owen Taylor).

2005-07-09  Kristian Rietveld  <kris@gtk.org>

	Fix #305737, patch from Tomislav Jonjic. This makes the
	gtk_tree_store_insert* family of functions emit row_has_child_toggled
	when needed (they didn't do that before).

	* gtk/gtktreestore.c (gtk_tree_store_insert): emit
	row_has_child_toggled when needed,
	(gtk_tree_store_insert_before): fix a possible memleak,
	emit row_has_child_toggled when needed,
	(gtk_tree_store_insert_after): ditto.

2005-07-09  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_real_expand_row): when
	open_all is TRUE, traverse the newly built tree to emit
	row_expanded for the subitems. (rev 1.444, patch in #172319
	broke this). Fixes #305582, reported by Billy Biggs.

2005-07-09  Tor Lillqvist  <tml@novell.com>

	* configure.in: Look for windres on Win32. Drop build/* from
	AC_CONFIG_FILES.

	* Makefile.am: Drop build from SUBDIRS. 

	* gdk/win32/rc/Makefile.am
	* gdk/Makefile.am
	* gtk/Makefile.am: Don't use the scripts in build/win32 to compile
	the rc files into resource object files. (This means we lose the
	build number increment magic, but I doubt it was that useful
	anyway.) Instead use windres directly. To pass a normal .o file
	produced by windres through libtool, which would want a .lo file,